# santas-little-helper

./: .crush.json  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
santas_little_helper/: __init__.py  database.py  main.py  models.py  utils.py
santas_little_helper/services/: __init__.py
santas_little_helper/services/carriers/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_database.py  test_integration.py  test_main.py  test_models.py
tests/services/carriers/: __init__.py  test_base.py
