[project]
name = "santas-little-helper"
version = "0.1.0"
description = "Package tracking CLI to monitor orders from multiple platforms"
authors = [
    {name = "Bobby R. Ward",email = "bobbyrward@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[project.scripts]
santas-little-helper = "santas_little_helper.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
